Package: parallelly
===================

Version: 1.23.0-9000 [2021-01-25]

NEW FEATURES:

 * makeClusterPSOCK(), or actually makeNodePSOCK(), gained argument 'quiet',
   which can be used to silence output produced by 'manual = TRUE'.

 * c() for 'cluster' objects now warns about duplicated cluster nodes.
 
MISCELLANEOUS:

 * All code is now using the 'parallelly.' prefix for options and the
   'R_PARALLELLY_' prefix for environment variables.  Settings that use the
   corresponding 'future.' and 'R_FUTURE_' prefixes are still recognized.

BUG FIX:

 * Above argument 'quiet' was introduced in future 1.19.1 but was mistakenly
   dropped from parallelly 1.20.0 when that was released, and therefore also
   from future (>= 1.20.0).


Version: 1.23.0 [2021-01-03]

NEW FEATURES:

 * availableCores(), availableWorkers(), and freeCores() gained argument
   'logical', which is passed down to parallel::detectCores() as-is.
   The default is TRUE but it can be changed by setting the R option
   'parallelly.availableCores.logical'.  This option can in turn be set via
   environment variable 'R_PARALLELLY_AVAILABLECORES_LOGICAL' which is
   applied (only) when the package is loaded.

 * Now makeClusterPSOCK() asserts that there are enough free connections
   available before attempting to create the parallel workers.  If too many
   workers are requested, an informative error message is produced.
 
 * Add availableConnections() and freeConnections() to infer the maximum number
   of connections that the current R installation can have open at any time
   and how many of those are currently free to be used.  This limit is
   typically 128 but may be different in custom R installations that are built
   from source.


Version: 1.22.0 [2020-12-12]

NEW FEATURES:

 * Now availableCores() queries also Unix command 'nproc', if available. This
   will make it respect the number of CPU/cores limited by 'cgroups' and Linux
   containers.
