@@ -5,6 +5,12 @@ S3method(as.cluster,SOCKnode)
 S3method(as.cluster,cluster)
 S3method(as.cluster,list)
 S3method(c,cluster)
+S3method(isForkedNode,default)
+S3method(isForkedNode,forknode)
+S3method(isLocalhostNode,RichSOCKnode)
+S3method(isLocalhostNode,SOCKnode)
+S3method(isLocalhostNode,default)
+S3method(isLocalhostNode,forknode)
 S3method(print,RichSOCKcluster)
 S3method(stopCluster,RichMPIcluster)
 S3method(summary,RichSOCKcluster)
@@ -19,6 +25,8 @@ export(cpuLoad)
 export(freeConnections)
 export(freeCores)
 export(isConnectionValid)
+export(isForkedNode)
+export(isLocalhostNode)
 export(makeClusterMPI)
 export(makeClusterPSOCK)
 export(makeNodePSOCK)
