@@ -9,6 +9,11 @@ NEW FEATURES:
    which can be used to silence output produced by 'manual = TRUE'.
 
  * c() for 'cluster' objects now warns about duplicated cluster nodes.
+
+ * Add isForkedNode() to test if a cluster node runs in a forked process.
+
+ * Add isLocalhostNode() to test if a cluster node runs on the current machine.
+
  
 MISCELLANEOUS:
 
